# cmake_example

./: README.MD
cmake1/: CMakeLists.txt  Doxyfile  main.cpp
cmake1/generated-docs/html/: CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  annotated.html  classes.html  classfc-members.html  classfc.html  dir_000001_000000.html  dir_000005_000004.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e1a715d407a4074a9fa63b2e02ec2b8f.html  dir_ee532ceb613f48f23d20ef02624c3a91.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  lb1_8cpp.html  lb1_8cpp__incl.dot  lb1_8cpp_a32d74b7805f0a78edb5f158598b0f3a8_icgraph.dot  lb1_8cpp_a4bb27e23a45ba11d70bed0858cae777c_icgraph.dot  lb1_8cpp_source.html  lb1_8h.html  lb1_8h__dep__incl.dot  lb1_8h_a32d74b7805f0a78edb5f158598b0f3a8_icgraph.dot  lb1_8h_a4bb27e23a45ba11d70bed0858cae777c_icgraph.dot  lb1_8h_source.html  lb2_8h.html  lb2_8h__dep__incl.dot  lb2_8h_a44096c84ad22d13e3089c282c38d4daa_icgraph.dot  lb2_8h_source.html  main_8cpp.html  main_8cpp__incl.dot  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.dot  (+2 more)
cmake1/generated-docs/latex/: annotated.tex  (+20 more)
cmake1/include/: lb1.h  lb2.h
cmake1/latex/: files.tex  main_8cpp.tex  main_8cpp.tex.tmp  main_8cpp__incl.dot  refman.tex
cmake1/src/: lb1.cpp
cmake2/: CMakeLists.txt  main.cu
cmake2/include/: lb1.h
cmake2/src/: lb1.cu
(+22 files in other folders)
